--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ role-tables:
 	src="https://gradio.s3-us-west-2.amazonaws.com/4.41.0/gradio.js"
 ></script>
 
+
 <gradio-app src="https://koalafannnnn-koala.hf.space" theme_mode="light"></gradio-app>
 
-<gradio-app src="https://koalafannnnn-cpu.hf.space" theme_mode="light"></gradio-app>
+<gradio-app src="https://koalafannnnn-mattergpt-cpu.hf.space" theme_mode="light"></gradio-app>
 
 
 <section>
